--- a/main.css
+++ b/main.css
@@ -457,10 +457,11 @@ form button:hover {
         top: 70px; /* Ajusta según la altura del header */
         left: 0;
         width: 100%;
-        background-color: rgba(0, 0, 0, 0.9);
-        backdrop-filter: blur(5px);
+        background-color: rgba(0, 0, 0, 0.9); /* Fondo semitransparente */
+        backdrop-filter: blur(5px); /* Efecto de desenfoque */
         padding: 10px 0;
         z-index: 1000;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Sombra */
     }
 
     nav.active {
@@ -479,7 +480,7 @@ form button:hover {
     .menu-vertical {
         position: static;
         display: none;
-        background-color: rgba(0, 0, 0, 0.7);
+        background-color: rgba(0, 0, 0, 0.7); /* Fondo semitransparente */
         box-shadow: none;
     }
 
