--- a/main.css
+++ b/main.css
@@ -425,16 +425,20 @@ form button:hover {
 
 /* Estilos para el botón de menú */
 #menu-toggle {
-    display: none; /* Oculto por defecto */
-    flex-direction: column;
+    
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: auto; /* Cambiado a auto para que se ajuste al contenido */
+    background-color: rgba(0, 0, 0, 0.8);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+    backdrop-filter: blur(5px);
+    display: flex;
+    align-items: center;
     justify-content: space-around;
-    width: 30px;
-    height: 30px;
-    background: transparent;
-    border: none;
-    cursor: pointer;
-    padding: 0;
-    z-index: 1001;
+    padding: 10px 20px; /* Ajustado el padding */
+
 }
 
 #menu-toggle span {
