--- a/main.css
+++ b/main.css
@@ -425,20 +425,16 @@ form button:hover {
 
 /* Estilos para el botón de menú */
 #menu-toggle {
-    
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: auto; /* Cambiado a auto para que se ajuste al contenido */
-    background-color: rgba(0, 0, 0, 0.8);
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    z-index: 1000;
-    backdrop-filter: blur(5px);
-    display: flex;
-    align-items: center;
+    display: none; /* Oculto por defecto */
+    flex-direction: column;
     justify-content: space-around;
-    padding: 10px 20px; /* Ajustado el padding */
-
+    width: 30px;
+    height: 30px;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    z-index: 1001;
 }
 
 #menu-toggle span {
@@ -461,11 +457,10 @@ form button:hover {
         top: 70px; /* Ajusta según la altura del header */
         left: 0;
         width: 100%;
-        background-color: rgba(0, 0, 0, 0.9); /* Fondo semitransparente */
-        backdrop-filter: blur(5px); /* Efecto de desenfoque */
+        background-color: rgba(0, 0, 0, 0.9);
+        backdrop-filter: blur(5px);
         padding: 10px 0;
         z-index: 1000;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Sombra */
     }
 
     nav.active {
@@ -484,7 +479,7 @@ form button:hover {
     .menu-vertical {
         position: static;
         display: none;
-        background-color: rgba(0, 0, 0, 0.7); /* Fondo semitransparente */
+        background-color: rgba(0, 0, 0, 0.7);
         box-shadow: none;
     }
 
