--- a/main.css
+++ b/main.css
@@ -477,10 +477,19 @@ form button:hover {
     }
 
     .menu-vertical {
-        position: static;
         display: none;
-        background-color: rgba(0, 0, 0, 0.7);
-        box-shadow: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    list-style: none;
+    padding: 10px 0;
+    min-width: 200px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    border-radius: 5px;
+    backdrop-filter: blur(5px);
+    z-index: 999;
     }
 
     .menu-horizontal li:hover .menu-vertical {
