--- a/main.css
+++ b/main.css
@@ -470,6 +470,17 @@ form button:hover {
     .menu-horizontal {
         flex-direction: column;
         align-items: center;
+        display: none;
+        position: absolute;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+        list-style: none;
+        padding: 10px 0;
+        min-width: 200px;
+        background-color: rgba(0, 0, 0, 0.7);
+        color: white;
+        border-radius: 5px;
+        backdrop-filter: blur(5px);
+        z-index: 999;
     }
 
     .menu-horizontal li {
